--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,8 +19,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
