--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "framer-motion": "^10.9.1",
+    "razorpay": "^2.8.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
